--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,13 @@
       name="viewport"
       content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width"
     />
+    <meta name="title" property="og:title" content="" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Where is the escape room Cafe??"
     />
+    <meta name="image" property="og:image" content="%PUBLIC_URL%/logo.png" />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -32,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>EXIT - 방 탈출 카페정보 & 추천 서비스</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
