setting: og:meta 주입

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
+      property="og:description"
       content="Where is the escape room Cafe??"
     />
     <meta name="image" property="og:image" content="%PUBLIC_URL%/logo.png" />
