setting: og-title set

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width"
     />
-    <meta name="title" property="og:title" content="" />
+    <meta name="title" property="og:title" content="EXIT - 방 탈출 카페정보 & 추천 서비스" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
