--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
       name="viewport"
       content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width"
     />
-    <meta name="title" property="og:title" content="EXIT - 방 탈출 카페정보 & 추천 서비스" />
+    <meta
+      name="title"
+      property="og:title"
+      content="EXIT - 방 탈출 카페정보 & 추천 서비스"
+    />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -16,6 +20,10 @@
     />
     <meta name="image" property="og:image" content="%PUBLIC_URL%/logo.png" />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
