--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,20 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>EXIT - 방 탈출 카페정보 & 추천 서비스</title>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-GF0T0DQGFK"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-GF0T0DQGFK');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
